# MBPlib

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  sbbt_cat.cpp
app/sbbt_cat/: main.cpp
app/sbbt_inspect/: main.cpp
app/sbbt_tracer/: .clang-format  .gitignore  LICENSE  Makefile  README.md  sbbt_tracer.cpp
doc/: CMakeLists.txt
example/: CMakeLists.txt
example/src/: batage_specs.hpp  compare.cpp  default_constructible.cpp  example_batage.cpp  example_tage.cpp  main.cpp  parallel_simulation_example.cpp  tage_specs.hpp
include/mbp/core/: branch.hpp  predictor.hpp
include/mbp/examples/: 2bcgskew.hpp  batage.hpp  bimodal.hpp  gshare.hpp  hashed_perceptron.hpp  mbp_examples.hpp  tage.hpp  tage_sc_l_cbp5.hpp  tournament.hpp  two_level.hpp
include/mbp/sim/: predictor.hpp  sbbt_reader.hpp  sbbt_writer.hpp  simulator.hpp
include/mbp/utils/: arithmetic.hpp  bimodal_table.hpp  indexing.hpp  saturated_reg.hpp
src/: CMakeLists.txt
src/core/: branch.cpp  predictor.cpp
src/examples/: tage_sc_l_cbp5.cpp
src/sim/: branch.cpp  predictor.cpp  sbbt_reader.cpp  sbbt_writer.cpp  simulator.cpp
